--- a/sample.html
+++ b/sample.html
@@ -1,6 +1,6 @@
 <html>
-<head>test page</head>
-<body bg_color=light blue>
+<head>test page</head><br>
+<body bgcolor="#E6E6FA">
 first test page
 </body>
 </html>
